# TAFPred

./: .gitignore  .python-version  100MB.txt  Dockerfile.txt  README.md  pyproject.toml
Dataset/example/: id_list.txt
dataset/: id_list.txt
dataset/FASTA/: 1ABZ-A.fasta  1AFO-A.fasta  1AGT-A.fasta  1AXH-A.fasta  1B4G-A.fasta  1BAH-A.fasta  1BGK-A.fasta  1BKU-A.fasta  1BNB-A.fasta  1BY0-A.fasta  1C01-A.fasta  1C3Y-A.fasta  1C4E-A.fasta  1CIX-A.fasta  1D0R-A.fasta  1D1H-A.fasta  1D6B-A.fasta  1D8B-A.fasta  1DCJ-A.fasta  1DEC-A.fasta  1DP3-A.fasta  1DQC-A.fasta  1DSV-A.fasta  1E0E-A.fasta  1E4T-A.fasta  1E8R-A.fasta  1EHX-A.fasta  1EKZ-A.fasta  1EV0-A.fasta  1EWS-A.fasta  1F4S-P.fasta  1FRY-A.fasta  1FV5-A.fasta  1G1P-A.fasta  1G2H-A.fasta  1GHH-A.fasta  1GP8-A.fasta  1H7D-A.fasta  1H8B-A.fasta  1HA8-A.fasta  (+258 more)
example/: id_list.txt
models/: OPTGeneticFeat.txt  phi_model.pkl  phi_scaler.pkl  psi_model.pkl  psi_scaler.pkl
output/: 1ABZ-A_result.txt  AAADD_result.txt
output/Windowed_file/: feat_179_w_3.csv
output/merge_features/: 1ABZ-A.csv  AAAAA.csv  AABCC.csv
script/: run_tafpred.ipynb  run_tafpred.py  run_windowing.java  window_param.txt
tafpred/: TAFPred.ipynb
tests/: test_tafpred.py
tools/CNCC/: CNCC_Gen.py
tools/OPAL/: Demo.m  Readme  Scores_OPAL.txt  generatePSSM  id_list.txt  properties.txt  removefiles_1.sh  runOPAL  run_MoRFchibi.sh  run_OPAL.m
tools/SPIDER3-Single_np/: impute_script_np.sh
tools/SPOT-Disorder2/: README  protlist.txt  run_all_models.py  run_spotdis2.sh  spotdis2.py
tools/Windowing/: run_windowing.java
(+1128 files in other folders)
